Prevent players from obtaining more concurrent islands by owner transfer